--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -31,17 +31,30 @@
    </property>
   </widget>
   <widget class="QToolBar" name="mainToolBar">
+   <property name="iconSize">
+    <size>
+     <width>16</width>
+     <height>16</height>
+    </size>
+   </property>
    <attribute name="toolBarArea">
     <enum>TopToolBarArea</enum>
    </attribute>
    <attribute name="toolBarBreak">
     <bool>false</bool>
    </attribute>
+   <addaction name="actionBack"/>
+   <addaction name="actionHome"/>
+   <addaction name="separator"/>
    <addaction name="actionOpen"/>
    <addaction name="actionClose"/>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
   <action name="actionOpen">
+   <property name="icon">
+    <iconset resource="ProfileViewer.qrc">
+     <normaloff>:/res/open.png</normaloff>:/res/open.png</iconset>
+   </property>
    <property name="text">
     <string>Open</string>
    </property>
@@ -50,12 +63,36 @@
    </property>
   </action>
   <action name="actionClose">
+   <property name="icon">
+    <iconset resource="ProfileViewer.qrc">
+     <normaloff>:/res/close.png</normaloff>:/res/close.png</iconset>
+   </property>
    <property name="text">
     <string>Close</string>
    </property>
   </action>
+  <action name="actionBack">
+   <property name="icon">
+    <iconset resource="ProfileViewer.qrc">
+     <normaloff>:/res/back.png</normaloff>:/res/back.png</iconset>
+   </property>
+   <property name="text">
+    <string>Back</string>
+   </property>
+  </action>
+  <action name="actionHome">
+   <property name="icon">
+    <iconset resource="ProfileViewer.qrc">
+     <normaloff>:/res/home.png</normaloff>:/res/home.png</iconset>
+   </property>
+   <property name="text">
+    <string>Home</string>
+   </property>
+  </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
- <resources/>
+ <resources>
+  <include location="ProfileViewer.qrc"/>
+ </resources>
  <connections/>
 </ui>
