Adding a throbber for lengthy data operations

--- a/ProfileViewer.qrc
+++ b/ProfileViewer.qrc
@@ -4,5 +4,6 @@
         <file>res/open.png</file>
         <file>res/home.png</file>
         <file>res/close.png</file>
+        <file>res/throbber.gif</file>
     </qresource>
 </RCC>
