--- a/ProfileViewer.qrc
+++ b/ProfileViewer.qrc
@@ -5,5 +5,6 @@
         <file>res/home.png</file>
         <file>res/close.png</file>
         <file>res/throbber.gif</file>
+        <file>res/columns.png</file>
     </qresource>
 </RCC>
