--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -99,11 +99,20 @@
    </property>
   </widget>
   <widget class="QToolBar" name="mainToolBar">
+   <property name="windowTitle">
+    <string>Main Toolbar</string>
+   </property>
+   <property name="movable">
+    <bool>false</bool>
+   </property>
    <property name="iconSize">
     <size>
      <width>16</width>
      <height>16</height>
     </size>
+   </property>
+   <property name="floatable">
+    <bool>false</bool>
    </property>
    <attribute name="toolBarArea">
     <enum>TopToolBarArea</enum>
@@ -115,6 +124,7 @@
    <addaction name="actionHome"/>
    <addaction name="separator"/>
    <addaction name="actionOpen"/>
+   <addaction name="actionColumns"/>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
   <action name="actionOpen">
@@ -169,6 +179,15 @@
    </property>
    <property name="shortcut">
     <string>Ctrl+Home</string>
+   </property>
+  </action>
+  <action name="actionColumns">
+   <property name="icon">
+    <iconset resource="ProfileViewer.qrc">
+     <normaloff>:/res/columns.png</normaloff>:/res/columns.png</iconset>
+   </property>
+   <property name="text">
+    <string>Select Columns</string>
    </property>
   </action>
  </widget>
