--- a/viewer/mainwindow.ui
+++ b/viewer/mainwindow.ui
@@ -261,11 +261,18 @@
    <receiver>MainWindow</receiver>
    <slot>selected(QModelIndex)</slot>
   </connection>
+  <connection>
+   <sender>callView</sender>
+   <signal>activated(QModelIndex)</signal>
+   <receiver>MainWindow</receiver>
+   <slot>referenced(QModelIndex)</slot>
+  </connection>
  </connections>
  <slots>
   <slot>back()</slot>
   <slot>home()</slot>
   <slot>open()</slot>
   <slot>selected(QModelIndex)</slot>
+  <slot>referenced(QModelIndex)</slot>
  </slots>
 </ui>
